--- a/checkbook-checkout/public/index.html
+++ b/checkbook-checkout/public/index.html
@@ -18,7 +18,9 @@
     Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
+
   -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>React App</title>
   
 </head>
